--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
+    "indicative": "^2.0.6",
     "jade": "~1.9.2",
+    "laravel-validator-for-js": "^0.5.1",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   },
