--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.0",
